[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/Tiles/Ground_TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://teleportBlock.gd" type="Script" id=3]
[ext_resource path="res://sprites/TeleportBlock.png" type="Texture" id=4]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://fade_in/fade_in.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 99.3439 )

[sub_resource type="RectangleShape2D" id=2]

[node name="level1" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 393246, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 0, 0, 458789, 0, 0, 458790, 0, 0, 458791, 0, 0, 524294, 0, 0, 524295, 0, 0, 524327, 15, 0, 589863, -1073741808, 0, 655399, -1073741808, 0, 720935, -1073741808, 0, 786471, -1073741808, 0, 851972, 0, 0, 851973, 0, 0, 852007, -1073741808, 0, 917537, 0, 0, 917543, -1073741808, 0, 983073, 0, 0, 983079, -1073741808, 0, 1048609, 0, 0, 1048615, -1073741808, 0, 1114112, 17, 0, 1114113, 17, 0, 1114114, 17, 0, 1114115, 17, 0, 1114116, 17, 0, 1114117, 17, 0, 1114118, 17, 0, 1114119, 17, 0, 1114120, 17, 0, 1114121, 17, 0, 1114122, 17, 0, 1114123, 17, 0, 1114124, 17, 0, 1114125, 17, 0, 1114126, 17, 0, 1114127, 17, 0, 1114128, 17, 0, 1114129, 17, 0, 1114130, 17, 0, 1114131, 17, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114151, -1073741808, 0, 1179687, -1073741808, 0, 1245223, -1073741808, 0, 1310759, -1073741808, 0, 1376256, 17, 0, 1376257, 17, 0, 1376258, 17, 0, 1376259, 17, 0, 1376260, 17, 0, 1376261, 17, 0, 1376262, 17, 0, 1376263, 17, 0, 1376264, 17, 0, 1376265, 17, 0, 1376266, 17, 0, 1376267, 17, 0, 1376268, 17, 0, 1376269, 17, 0, 1376270, 17, 0, 1376271, 17, 0, 1376272, 17, 0, 1376273, 17, 0, 1376274, 17, 0, 1376275, 17, 0, 1376276, 17, 0, 1376277, 17, 0, 1376278, 17, 0, 1376279, 17, 0, 1376280, 17, 0, 1376281, 17, 0, 1376282, 17, 0, 1376283, 17, 0, 1376284, 17, 0, 1376285, 17, 0, 1376286, 17, 0, 1376287, 17, 0, 1376288, 17, 0, 1376289, 17, 0, 1376290, 17, 0, 1376291, 17, 0, 1376292, 17, 0, 1376293, 17, 0, 1376294, 17, 0, 1376295, 5, 0, 1441792, 11, 0, 1441793, 11, 0, 1441794, 11, 0, 1441795, 11, 0, 1441796, 11, 0, 1441797, 11, 0, 1441798, 11, 0, 1441799, 11, 0, 1441800, 11, 0, 1441801, 11, 0, 1441802, 11, 0, 1441803, 11, 0, 1441804, 11, 0, 1441805, 11, 0, 1441806, 11, 0, 1441807, 11, 0, 1441808, 11, 0, 1441809, 11, 0, 1441810, 11, 0, 1441811, 11, 0, 1441812, 11, 0, 1441813, 11, 0, 1441814, 11, 0, 1441815, 11, 0, 1441816, 11, 0, 1441817, 11, 0, 1441818, 11, 0, 1441819, 11, 0, 1441820, 11, 0, 1441821, 11, 0, 1441822, 11, 0, 1441823, 11, 0, 1441824, 11, 0, 1441825, 11, 0, 1441826, 11, 0, 1441827, 11, 0, 1441828, 11, 0, 1441829, 11, 0, 1441830, 11, 0, 1441831, 11, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 53.2875, 311.343 )

[node name="teleportBlock" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 248.949, 257.111 )
script = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="teleportBlock"]

[node name="Sprite" type="Sprite" parent="teleportBlock/StaticBody2D"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="teleportBlock"]
shape = SubResource( 1 )

[node name="FadeIn" parent="teleportBlock" instance=ExtResource( 5 )]
visible = false
margin_left = -248.949
margin_top = -257.111
margin_right = 391.051
margin_bottom = 102.889

[node name="teleportBlock" type="Area2D" parent="teleportBlock"]
position = Vector2( 248.949, 257.111 )
script = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="teleportBlock/teleportBlock"]

[node name="Sprite" type="Sprite" parent="teleportBlock/teleportBlock/StaticBody2D"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="teleportBlock/teleportBlock"]
shape = SubResource( 2 )

[node name="FadeIn" type="ColorRect" parent="teleportBlock/teleportBlock" instance=ExtResource( 5 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.949
margin_top = -257.111
margin_right = 391.051
margin_bottom = 102.889
color = Color( 0, 0, 0, 0 )
script = ExtResource( 6 )
[connection signal="body_entered" from="teleportBlock" to="teleportBlock" method="_on_teleportBlock_body_entered"]
[connection signal="fade_finished" from="teleportBlock/FadeIn" to="teleportBlock" method="_on_FadeIn_fade_finished"]
[connection signal="body_entered" from="teleportBlock/teleportBlock" to="teleportBlock/teleportBlock" method="_on_teleportBlock_body_entered"]
[connection signal="fade_finished" from="teleportBlock/teleportBlock/FadeIn" to="teleportBlock/teleportBlock" method="_on_FadeIn_fade_finished"]
